feat: FE pages changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                 <h2><i class="fas fa-magic"></i> Create New Video</h2>
                 
                 <!-- Motivational Quote Form -->
-                <form action="{{ url_for('create') }}" method="post" class="form-group">
+                <form action="{{ url_for('create_video') }}" method="post" class="form-group">
                     <div class="input-group">
                         <label for="quote">Motivational Quote</label>
                         <textarea name="quote" id="quote" placeholder="Enter your inspirational quote here..."></textarea>
